--- a/final-eval/index.html
+++ b/final-eval/index.html
@@ -8,9 +8,23 @@
     </head>
     <body>
         <div class="center">
-            <h4>John and Jane Smith's</h4>
-            <h1>Super Bowl LVIII</h1>
-            <h3>Extravaganza Party</h3>
+            <div id="top-text">
+                <h4>John and Jane Smith's</h4>
+                <h1>Super Bowl LVIII</h1>
+                <h2>Extravaganza Party</h2>
+            </div>
+            <div id="vs">
+                <div id="left">
+                    <img src="/final-eval/images/left.jpg" alt="football">
+                    <h4>Random Text</h4>
+                    <h5>So Random</h5>
+                </div>
+                <div id="right">
+                    <img src="/final-eval/images/right.jpg" alt="football">
+                    <h4>Random Text</h4>
+                    <h5>So Random</h5>
+                </div>
+            </div>
         </div>
     </body>
 </html>
