--- a/final-eval/index.html
+++ b/final-eval/index.html
@@ -19,11 +19,26 @@
                     <h4>Random Text</h4>
                     <h5>So Random</h5>
                 </div>
+                <p>VS</p>
                 <div id="right">
                     <img src="/final-eval/images/right.jpg" alt="football">
                     <h4>Random Text</h4>
                     <h5>So Random</h5>
                 </div>
+            </div>
+            <div id="bottom-text">
+                <h1>Sunday, Feb 11 2024 @ 6pm</h1>
+                <h2>Join us for the Ultimate Super Bowl Sunday Bash!</h2>
+                <h2>We'll have hot food, cold drinks, and big screens; all that's missing is you!</h2>
+                <h5>The party will be at 1234 Main St, Anytown, USA</h5>
+            </div>
+            <div id="buttons">
+                <a href="#">
+                    I can make it!
+                </a>
+                <a href="#">
+                    I can't make it...
+                </a>
             </div>
         </div>
     </body>
