--- a/final-eval/index.html
+++ b/final-eval/index.html
@@ -33,10 +33,10 @@
                 <h5>The party will be at 1234 Main St, Anytown, USA</h5>
             </div>
             <div id="buttons">
-                <a href="#">
+                <a class="left" href="#">
                     I can make it!
                 </a>
-                <a href="#">
+                <a class="right" href="#">
                     I can't make it...
                 </a>
             </div>
