--- a/final-eval/index.html
+++ b/final-eval/index.html
@@ -16,14 +16,14 @@
             <div id="vs">
                 <div id="left">
                     <img src="/final-eval/images/left.jpg" alt="football">
-                    <h4>Random Text</h4>
-                    <h5>So Random</h5>
+                    <h4>FSU</h4>
+                    <h5>Place your bets!</h5>
                 </div>
                 <p>VS</p>
                 <div id="right">
                     <img src="/final-eval/images/right.jpg" alt="football">
-                    <h4>Random Text</h4>
-                    <h5>So Random</h5>
+                    <h4>Notre Dame</h4>
+                    <h5>Who will win!</h5>
                 </div>
             </div>
             <div id="bottom-text">
@@ -39,6 +39,9 @@
                 <a class="right" href="#">
                     I can't make it...
                 </a>
+            </div>
+            <div id="last">
+                <h5>Questions? Call 555.123.4567</h5>
             </div>
         </div>
     </body>
