--- a/final-eval/index.html
+++ b/final-eval/index.html
@@ -23,7 +23,7 @@
                 <div id="right">
                     <img src="/final-eval/images/right.jpg" alt="football">
                     <h4>Notre Dame</h4>
-                    <h5>Who will win!</h5>
+                    <h5>Who will win?</h5>
                 </div>
             </div>
             <div id="bottom-text">
