responsive and fixed gallery

--- a/gallery.html
+++ b/gallery.html
@@ -30,27 +30,15 @@
                 <img src="images/pic5.jpg" alt="book cover">
                     <p class="title">Book Cover</p>
                     <p class="small-text"><i>Adobe Illustrator</i></p>
-                <img src="images/pic4.jpg" alt="logo">
+                <img id="logo-design" src="images/pic4.jpg" alt="logo">
                     <p class="title">Logo Design</p>
-                    <p class="small-text"><i>Adobe Illustrator, Photoshop</i></p>
+                    <p class="small-text"><i>Adobe Illustrator</i></p>
                 <img src="images/pic6.jpg" alt="character">
                     <p class="title">Character Design</p>
-                    <p class="small-text"><i>Adobe Illustrator</i></p>
-                <img src="images/pic7.jpg" alt="shapes">
-                    <p class="title">Value Scale Drawing</p>
                     <p class="small-text"><i>Adobe Illustrator</i></p>
                 <img src="images/jonnypic.jpg" alt="photography">
                     <p class="title">Photography Portrait</p>
                     <p class="small-text"><i>Adobe Lightroom, Photoshop</i></p>
-                <img src="images/illustrations.jpg" alt="figures">
-                    <p class="title">Figure Illustrations</p>
-                    <p class="small-text"><i>Adobe Illustrator</i></p>
-                <img src="images/Screenshot 2023-09-06 at 6.57.12 AM.png" alt="">
-                    <p class="title">Custom Font</p>
-                    <p class="small-text"><i>BirdFont</i></p>
-                <img src="images/illustrations.jpg" alt="figures">
-                    <p class="title">Figure Illustrations</p>
-                    <p class="small-text"><i>Adobe Illustrator</i></p>
             </div>
             <h3>Personal Projects</h3>
             <div class="mixed-layout">
