--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         </div>
         <div id="layout">    
             <h3>Kae's Portfolio Website</h3>
+            <a href="https://www.instagram.com/kaeklud/" target="_blank">Find me on Instagram!</a>
             <div id="main-layout"></div>
             <p>Aphrodite Rendering <i>Procreate, iPad</i></p>
         </div>
