--- a/contact.html
+++ b/contact.html
@@ -15,5 +15,22 @@
             <a href="about.html">About</a>
             <a href="https://dev-kaelyn-kluding-sandbox.pantheonsite.io/" target="_blank">Blog</a>
         </div>
+        <div id="layout">
+            <div id="left-content">
+                <h1>We should talk!</h1>
+                <h3>Tell me about your idea.</h3>
+            </div>
+            <div id="right-content">
+                <h3>Let's create something.</h3>
+                <div class="form">
+                    <span class="fill1">Name</span>
+                    <span class="fill2">Email address</span>
+                    <span class="fill3">Idea Summary</span>
+                    <a href="#">
+                        Send Message
+                    </a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
