--- a/contact.html
+++ b/contact.html
@@ -32,5 +32,15 @@
                 </div>
             </div>
         </div>
+        <div id="footer">
+            <div class="foot-nav">
+                <span>&copy; Kaelyn Kluding 2023</span>
+                <a href="index.html">Home</a>
+                <a href="gallery.html">Gallery</a>
+                <a href="contact.html">Contact</a>
+                <a href="about.html">About</a>
+                <a href="https://dev-kaelyn-kluding-sandbox.pantheonsite.io/" target="_blank">Blog</a>
+            </div>
+        </div>
     </body>
 </html>
