image full page

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="https://dev-kaelyn-kluding-sandbox.pantheonsite.io/" target="_blank">Blog</a>
         </div>
         <div id="layout">    
-            <div id="main-layout"></div>
+            <img src="images/person11.jpg">
             <p>Aphrodite Rendering <i>Procreate, iPad</i></p>
         </div>
 
