homepage pre critique done

--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
             <a href="about.html">About</a>
             <a href="https://dev-kaelyn-kluding-sandbox.pantheonsite.io/" target="_blank">Blog</a>
         </div>
-        <div id="layout">    
+        <div id="layout">  
             <img src="images/person11.jpg">
             <p>Aphrodite Rendering <i>Procreate, iPad</i></p>
         </div>
+
+        <div class="cta-button">
+            <a href="https://www.instagram.com/kaeklud/" target="_blank">
+                My Instagram
+            </a>
+        </div>  
 
         <div id="card-section">
             <div class="column contain">
