--- a/gallery.html
+++ b/gallery.html
@@ -28,16 +28,16 @@
                     <p class="title">National Park Poster</p>
                     <p class="small-text"><i>Adobe Illustrator</i></p>
                 <img src="images/pic5.jpg" alt="book cover">
-                    <p class="title">Book Cover</p>
+                    <p class="title">Public Domain Book Cover</p>
                     <p class="small-text"><i>Adobe Illustrator</i></p>
                 <img id="logo-design" src="images/pic4.jpg" alt="logo">
-                    <p class="title">Logo Design</p>
+                    <p class="title">Spaghetti Reworked Logo Design</p>
                     <p class="small-text"><i>Adobe Illustrator</i></p>
                 <img src="images/pic6.jpg" alt="character">
-                    <p class="title">Character Design</p>
+                    <p class="title">Waxia Character Design</p>
                     <p class="small-text"><i>Adobe Illustrator</i></p>
                 <img src="images/jonnypic.jpg" alt="photography">
-                    <p class="title">Photography Portrait</p>
+                    <p class="title">Model Photography Portrait</p>
                     <p class="small-text"><i>Adobe Lightroom, Photoshop</i></p>
             </div>
             <h3>Personal Projects</h3>
