--- a/about.html
+++ b/about.html
@@ -29,6 +29,9 @@
                     I have always had a deep interest in all things art. From incoherent scribbles when I was a child, to complex portraits when I entered high school, art has always held a place in my life. While I don't always finish my personal pieces, I constantly have a new idea forming in my mind; whether it be a digital painting, a quick sketch, or a logo for a made up company.
                 </p>
                 <h4>Skills</h4>
+                <p>
+                    These are skills that I've learned both in and out of class!
+                </p>
                 <ul>
                     <li>Adobe Photoshop</li>
                     <li>Adobe Illustrator</li>
