awards to about page

--- a/about.html
+++ b/about.html
@@ -41,6 +41,17 @@
                 </ul>
             </div>
         </div>
+        <div id="awards">
+            <div>
+                <img src="images/award1.jpg" alt="scholastic">
+                <p>Scholastic Art & Writing - Silver Key</p>
+            </div>
+            <div>
+                <img src="images/award2.jpg">
+                <p>JBL/Doja Cat Design Contest - Second Winning Division</p>
+            </div>
+        </div>
+
         <div id="footer">
             <div class="foot-nav">
                 <span>&copy; Kaelyn Kluding 2023</span>
