contact page update
'cause why would I want to sleep?

--- a/contact.html
+++ b/contact.html
@@ -21,17 +21,16 @@
                 <h3>Tell me about your idea.</h3>
             </div>
             <div id="right-content">
-                <h3>Let's create something.</h3>
-                <div class="form">
-                    <span class="fill1">Name</span>
-                    <span class="fill2">Email address</span>
-                    <span class="fill3">Idea Summary</span>
-                    <a href="#">
-                        Send Message
-                    </a>
-                </div>
+                <h3>Let's create something, <i>together</i></h3>
+                <a href="instagram.com/kaeklud/" target="_blank">
+                    <img src="images/instalogo.png" alt="yellow insta logo">
+                </a>
+                <a href="mailto:kaeklud@gmail.com">
+                    <img src="images/emaillogo.png" alt="yellow email logo">
+                </a>
             </div>
         </div>
+
         <div id="footer">
             <div class="foot-nav">
                 <span>&copy; Kaelyn Kluding 2023</span>
