my code was weird

--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
                     <img src="images/instalogo.png" alt="yellow insta logo">
                 </a>
                 <a href="mailto:kaeklud@gmail.com">
-                    <img src="images/emaillogo.png" alt="yellow email logo">
+                    <img src="images/emaillogo.png" alt="yello email logo">
                 </a>
             </div>
         </div>
