--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
             </div>
             <div id="right-content">
                 <h3>Let's create something, <i>together</i></h3>
-                <a href="instagram.com/kaeklud/" target="_blank">
+                <a href="https://www.instagram.com/kaeklud/" target="_blank">
                     <img src="images/instalogo.png" alt="yellow insta logo">
                 </a>
                 <a href="mailto:kaeklud@gmail.com">
