update homepage hero

--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
             <a href="about.html">About</a>
             <a href="https://dev-kaelyn-kluding-sandbox.pantheonsite.io/" target="_blank">Blog</a>
         </div>
-        <div id="layout">  
-            <img src="images/person11.jpg">
-            <p>Aphrodite Rendering <i>Procreate, iPad</i></p>
+
+        <div id="hero">
+            <div class="content">
+                <a href="contact.html">Let's Create Your Vision!</a>
+            </div>
         </div>
 
         <div class="cta-button">
@@ -48,6 +50,7 @@
                 </div>
             </div>
         </div>
+        
         <div id="footer">
             <div class="foot-nav">
                 <span>&copy; Kaelyn Kluding 2023</span>
