unified contact page

--- a/contact.html
+++ b/contact.html
@@ -22,11 +22,11 @@
             </div>
             <div id="right-content">
                 <h3>Let's create something, <i>together</i></h3>
-                <a href="https://www.instagram.com/kaeklud/" target="_blank">
-                    <img src="images/instalogo.png" alt="yellow insta logo">
-                </a>
                 <a href="mailto:kaeklud@gmail.com">
                     <img src="images/emaillogo.png" alt="yello email logo">
+                </a>
+                <a href="https://www.instagram.com/kaeklud/" target="_blank">
+                    <img src="images/insragramref.png" alt="yellow insta logo">
                 </a>
             </div>
         </div>
