updated about page

--- a/about.html
+++ b/about.html
@@ -15,40 +15,36 @@
             <a href="about.html">About</a>
             <a href="https://dev-kaelyn-kluding-sandbox.pantheonsite.io/" target="_blank">Blog</a>
         </div>
-        <div id="header">
-            <h3>Kaelyn Kluding (Kae)</h3>
-        </div>
-        <div id="main-layout">
-            <img
-                src="images/kae.JPG"
-                alt="selfie"
-            >
-            <div class="header-text">
-                <h4>About Me</h4>
-                <p>
-                    I have always had a deep interest in all things art. From incoherent scribbles when I was a child, to complex portraits when I entered high school, art has always held a place in my life. While I don't always finish my personal pieces, I constantly have a new idea forming in my mind; whether it be a digital painting, a quick sketch, or a logo for a made up company.
-                </p>
-                <h4>Skills</h4>
-                <p>
-                    These are skills that I've learned both in and out of class!
-                </p>
-                <ul>
-                    <li>Adobe Photoshop</li>
-                    <li>Adobe Illustrator</li>
-                    <li>HTML and CSS</li>
-                    <li>Web Design</li>
-                    <li>Digital Painting</li>
-                </ul>
-            </div>
-        </div>
-        <div id="awards">
-            <div>
-                <img src="images/award1.jpg" alt="scholastic">
-                <p>Scholastic Art & Writing - Silver Key</p>
-            </div>
-            <div>
-                <img src="images/award2.jpg">
-                <p>JBL/Doja Cat Design Contest - Second Winning Division</p>
+
+        <div id="card-section">
+            <div class="column contain">
+                <div id="cards">
+                    <h2>Hello! My name is Kaelyn.</h2>
+                    <img src="images/kae.JPG">
+                    
+                </div>
+                <div id="cards">
+                    <h2>All About Me</h2>
+                    <p>I have always had a deep interest in all things art. From incoherent scribbles when I was a child, to complex portraits when I entered high school, art has always held a place in my life. While I don't always finish my personal pieces, I constantly have a new idea forming in my mind; whether it be a digital painting, a quick sketch, or a logo for a made up company.</p>
+                </div>
+                <div id="cards">
+                    <h2>My Skills</h2>
+                    <ul>
+                        <li>Adobe Photoshop</li>
+                        <li>Adobe Illustrator</li>
+                        <li>HTML and CSS</li>
+                        <li>Logo Design</li>
+                        <li>Web Design</li>
+                        <li>Digital Painting</li>
+                    </ul>
+                </div>
+                <div id="cards">
+                    <h2>My Achievements and Awards</h2>
+                    <img src="images/award1.jpg">
+                    <p>Scolastic Art and Writing - Silver Key</p>
+                    <img src="images/award2.jpg">
+                    <p>JBL/Doja Cat Design Contest - Second Winning Division</p>
+                </div>
             </div>
         </div>
 
