about page last update

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <div class="column contain">
                 <div id="cards">
                     <h2>Hello! My name is Kaelyn.</h2>
-                    <img src="images/kae.JPG">
+                    <img class="self" src="images/kae.JPG">
                     
                 </div>
                 <div id="cards">
@@ -41,9 +41,9 @@
                 <div id="cards">
                     <h2>My Achievements and Awards</h2>
                     <img src="images/award1.jpg">
-                    <p>Scolastic Art and Writing - Silver Key</p>
+                    <h3>Scolastic Art and Writing - Silver Key</h3>
                     <img src="images/award2.jpg">
-                    <p>JBL/Doja Cat Design Contest - Second Winning Division</p>
+                    <h3>JBL/Doja Cat Design Contest - Second Winning Division</h3>
                 </div>
             </div>
         </div>
