--- a/contact.html
+++ b/contact.html
@@ -16,6 +16,18 @@
             <a href="https://dev-kaelyn-kluding-sandbox.pantheonsite.io/" target="_blank">Blog</a>
         </div>
 
+        <div id="layout">
+            <div id="left-content">
+                <h2>Let's create something, <i>together</i></h2>
+                <p>Reach out to me by filling out my form or email me directly!</p>
+            </div>
+            <div id="right-content">
+                <a href="mailto:kaeklud@gmail.com">
+                    <img src="images/emaillogo.png" alt="email">
+                </a>
+            </div>
+        </div>
+
         <div id="form-layout">
             <main>
                 
