--- a/sweet/sweet.html
+++ b/sweet/sweet.html
@@ -9,13 +9,13 @@
     <body>
         <div class="slideshow-container">
             <div class="slide active">
-                <img src="image1.jpg" alt="Image 1">
+                <img src="sweet-images/pic1.jpg" alt="Image 1">
             </div>
             <div class="slide">
-                <img src="image2.jpg" alt="Image 2">
+                <img src="sweet-images/pic2.jpg" alt="Image 2">
             </div>
             <div class="slide">
-                <img src="image3.jpg" alt="Image 3">
+                <img src="sweet-images/pic1.jpg" alt="Image 3">
             </div>
         </div>
 
